# gtfs-trip-prefect

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  PRD.md  README.md  REDIS_OPTIMIZATION.md  create_work_pool.py  deploy.py  deploy.sh  docker-compose.yml  functions.py  gtfs_stops.py  mongo_test.py  prefect.yaml  pyproject.toml  requirements.txt  run_continuous.py  run_etl.sh  run_gtfs_stops.sh
.github/workflows/: gtfs_etl.yml
