[project]
name = "gtfs-prefect-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "gtfs-realtime-bindings>=1.0.0",
    "jsonpatch>=1.33",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "redis>=5.2.1",
]
